Developed automation test for List View module

--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,7 @@
 					<suiteXmlFiles>
 <!--						<suiteXmlFile>materialMaster.xml</suiteXmlFile>-->
 						<suiteXmlFile>listPageSearch.xml</suiteXmlFile>
+						<suiteXmlFile>listView.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
