--- a/pom.xml
+++ b/pom.xml
@@ -145,8 +145,8 @@
                         </property>
                     </properties>
 					<suiteXmlFiles>
-						<suiteXmlFile>materialMaster.xml</suiteXmlFile>
-<!--						<suiteXmlFile>listPageSearch.xml</suiteXmlFile>-->
+<!--						<suiteXmlFile>materialMaster.xml</suiteXmlFile>-->
+						<suiteXmlFile>listPageSearch.xml</suiteXmlFile>
 <!--						<suiteXmlFile>listView.xml</suiteXmlFile>-->
 					</suiteXmlFiles>
 				</configuration>
