Updated logs and modified code

--- a/config.properties
+++ b/config.properties
@@ -1,8 +1,7 @@
 #----- Chrome Path ----
 driverPath = drivers/chromedriver
-driverFirefoxPath = drivers/geckodriver2
 browser=chrome
-headless=true
+headless=false
 
 #Int envS
 #url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/MarcusOne/enter-username
