--- a/pom.xml
+++ b/pom.xml
@@ -145,13 +145,15 @@
                         </property>
                     </properties>
 					<suiteXmlFiles>
-<!--						<suiteXmlFile>build_xmls/materialMaster.xml</suiteXmlFile>-->
-						<suiteXmlFile>build_xmls/listPageSearch.xml</suiteXmlFile>
-						<suiteXmlFile>build_xmls/listView.xml</suiteXmlFile>
+						<!--this list_Page_Search xml include all the test regarding global and advance search-->
+						<suiteXmlFile>build_xmls/list_Page_Search.xml</suiteXmlFile>
+						<!--this list_View xml include all the test regarding list view option like add, edit, delete view-->
+						<suiteXmlFile>build_xmls/list_View.xml</suiteXmlFile>
+						<!--this material_Master xml include all the test regarding material master record functionality-->
+						<suiteXmlFile>build_xmls/material_Master.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
-
 
 		</plugins>
 
