Updated code for run testson env  through the command line

--- a/config.properties
+++ b/config.properties
@@ -3,22 +3,23 @@ driverPath = drivers/chromedriver
 browser=chrome
 headless=true
 
-#Int envS
-#url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/MarcusOne/enter-username
+#Int(QAR) envS
+url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/MarcusOne/enter-username
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=eiyaz.malik@prospecta.com
-#reqUserName = auto_initiator@yopmail.com
-#password = Welcome@123
-#revUserName = auto_reviewer@yopmail.com
+qarReqUserName = auto_initiator@yopmail.com
+qarReqPassword = Welcome@123
+qarRevUserName = auto_reviewer@yopmail.com
+qarRevPassword = Welcome@123
 
-#Stgaing env
-url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/Marcusone/enter-username
-urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
-qaUserName=roma.ahuja@prospecta.com
-reqUserName = prospecta_initiator@yopmail.com
-password = Welcome@1234
-revUserNameStage = prospecta_reviewer@yopmail.com
-revPasswordStage = Welcome@1234
+#Stgaing(QAH) env
+#url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/Marcusone/enter-username
+#urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
+#qaUserName=roma.ahuja@prospecta.com
+qahReqUserName = prospecta_initiator@yopmail.com
+qahReqPassword = Welcome@1234
+qahRevUserName = prospecta_reviewer@yopmail.com
+qahRevPassword = Welcome@1234
 
 #prod env
 #urlProd = http://fuse.masterdataonline.com
