Developed all test for Home page menu

--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
                         </property>
                     </properties>
 					<suiteXmlFiles>
-						<!--this home_Page xml include all the test regarding Home menu-->
+						<!--this home_Page xml include all the test regarding Home menu(Inbox,Completed,My request)-->
 						<suiteXmlFile>build_xmls/home_Page.xml</suiteXmlFile>
 						<!--this list_Page_Search xml include all the test regarding advance search-->
 						<suiteXmlFile>build_xmls/list_Page_Search.xml</suiteXmlFile>
