--- a/config.properties
+++ b/config.properties
@@ -16,7 +16,8 @@ qarRevPassword = Welcome@123
 #url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/Marcusone/enter-username
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=roma.ahuja@prospecta.com
-qahReqUserName = rahul.sharma@prospecta.com
+#qahReqUserName = rahul.sharma@prospecta.com
+qahReqUserName = prospecta_initiator@yopmail.com
 qahReqPassword = Welcome@1234
 qahRevUserName = prospecta_reviewer@yopmail.com
 qahRevPassword = Welcome@1234
