--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,8 @@
 						<suiteXmlFile>build_xmls/list_View.xml</suiteXmlFile>
 						<!--this material_Master xml include all the test regarding material master record functionality-->
 						<suiteXmlFile>build_xmls/material_Master.xml</suiteXmlFile>
+						<!--this material_Creation xml include all the test regarding material creation record functionality-->
+						<suiteXmlFile>build_xmls/material_Creation.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
