--- a/config.properties
+++ b/config.properties
@@ -18,9 +18,18 @@ qarRevPassword = Welcome@123
 #qaUserName=roma.ahuja@prospecta.com
 #qahReqUserName = rahul.sharma@prospecta.com
 qahReqUserName = prospecta_initiator@yopmail.com
-qahReqPassword = Welcome@1234
+qahReqPassword = Welcome@321
 qahRevUserName = prospecta_reviewer@yopmail.com
 qahRevPassword = Welcome@1234
+
+#Int(SANDBOX) envS
+urlSandBox = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/prosqa/enter-username
+#urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
+#qaUserName=eiyaz.malik@prospecta.com
+sandBoxReqUserName = sbqa_initiator@yopmail.com
+sandBoxReqPassword = Welcome@123
+sandBoxRevUserName = sbqa_reviewer@yopmail.com
+sandBoxRevPassword = Welcome@123
 
 #prod env
 #urlProd = http://fuse.masterdataonline.com
