--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,8 @@
 								<suiteXmlFile>build_xmls/material_Creation.xml</suiteXmlFile>
 								<!--this duplicate_Rule xml include all the test regarding Duplicate business rule functionality-->
 								<suiteXmlFile>build_xmls/duplicate_Rule.xml</suiteXmlFile>
+								<!--this user_Defined_Rule xml include all the test regarding User Defined business rule functionality-->
+								<suiteXmlFile>build_xmls/user_Defined_Rule.xml</suiteXmlFile>
 							</suiteXmlFiles>
 							<reportsDirectory>${project.build.directory}/test-output</reportsDirectory>
 						</configuration>
