Updated code for checking report purpose

--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 #----- Chrome Path ----
 driverPath = drivers/chromedriver
 browser=chrome
-headless=true
+headless=false
 
 #Int(QAR) envS
 url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/MarcusOne/enter-username
@@ -22,7 +22,7 @@ qahReqPassword = Welcome@321
 qahRevUserName = prospecta_reviewer@yopmail.com
 qahRevPassword = Welcome@321
 
-#Int(SANDBOX) envS
+#(SANDBOX) envS
 urlSandBox = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/prosqa/enter-username
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=eiyaz.malik@prospecta.com
@@ -30,6 +30,15 @@ sandBoxReqUserName = sbqa_initiator@yopmail.com
 sandBoxReqPassword = Welcome@123
 sandBoxRevUserName = sbqa_reviewer@yopmail.com
 sandBoxRevPassword = Welcome@123
+
+#(QAA) envS
+urlQAA = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/QAA/enter-username?redirect_url=%2Fhome%2Fdash%2Fwelcome
+#urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
+#qaUserName=eiyaz.malik@prospecta.com
+qaaReqUserName = qaa_initiator@yopmail.com
+qaaReqPassword = Hello@123
+qaaRevUserName = qaa_reviewer@yopmail.com 
+qaaRevPassword = Hello@123
 
 #prod env
 #urlProd = http://fuse.masterdataonline.com
