--- a/config.properties
+++ b/config.properties
@@ -27,7 +27,7 @@ urlSandBox = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/pros
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=eiyaz.malik@prospecta.com
 sandBoxReqUserName = sbqa_initiator@yopmail.com
-sandBoxReqPassword = Welcome@321
+sandBoxReqPassword = Prospecta$1234
 sandBoxRevUserName = sbqa_reviewer@yopmail.com
 sandBoxRevPassword = Welcome@123
 
