--- a/config.properties
+++ b/config.properties
@@ -7,9 +7,9 @@ headless=false
 url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/MarcusOne/enter-username
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=eiyaz.malik@prospecta.com
-qarReqUserName = auto_initiator@yopmail.com
+qarReqUserName = Auto_initiator@yopmail.com
 qarReqPassword = Welcome@123
-qarRevUserName = auto_reviewer@yopmail.com
+qarRevUserName = Auto_reviewer@yopmail.com
 qarRevPassword = Welcome@123
 
 #Stgaing(QAH) env
