Fxed code as per failed tests

--- a/config.properties
+++ b/config.properties
@@ -26,9 +26,9 @@ qahRevPassword = Welcome@321
 urlSandBox = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/prosqa/enter-username
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=eiyaz.malik@prospecta.com
-sandBoxReqUserName = sbqa_initiator@yopmail.com
-sandBoxReqPassword = Prospecta$1234
-sandBoxRevUserName = sbqa_reviewer@yopmail.com
+sandBoxReqUserName = Rahul.initiator@yopmail.com
+sandBoxReqPassword = Welcome@123
+sandBoxRevUserName = Rahul.reviewer@yopmail.com
 sandBoxRevPassword = Welcome@123
 
 #(QAA) envS
