--- a/config.properties
+++ b/config.properties
@@ -4,41 +4,41 @@ browser=chrome
 headless=false
 
 #Int(QAR) envS
-url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/MarcusOne/enter-username
+QAR_url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/MarcusOne/enter-username
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=eiyaz.malik@prospecta.com
-qarReqUserName = Auto_initiator@yopmail.com
-qarReqPassword = Welcome@123
-qarRevUserName = Auto_reviewer@yopmail.com
-qarRevPassword = Welcome@123
+QARReqUserName = Auto_initiator@yopmail.com
+QARReqPassword = Welcome@123
+QARRevUserName = Auto_reviewer@yopmail.com
+QARRevPassword = Welcome@123
 
 #Stgaing(QAH) env
-#url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/Marcusone/enter-username
+QAH_url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/Marcusone/enter-username
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=roma.ahuja@prospecta.com
 #qahReqUserName = rahul.sharma@prospecta.com
-qahReqUserName = prospecta_initiator@yopmail.com
-qahReqPassword = Welcome@321
-qahRevUserName = prospecta_reviewer@yopmail.com
-qahRevPassword = Welcome@321
+QAHReqUserName = prospecta_initiator@yopmail.com
+QAHReqPassword = Welcome@321
+QAHRevUserName = prospecta_reviewer@yopmail.com
+QAHRevPassword = Welcome@321
 
 #(SANDBOX) envS
-urlSandBox = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/prosqa/enter-username
+SAND_url = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/prosqa/enter-username
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=eiyaz.malik@prospecta.com
-sandBoxReqUserName = Rahul.initiator@yopmail.com
-sandBoxReqPassword = Welcome@123
-sandBoxRevUserName = Rahul.reviewer@yopmail.com
-sandBoxRevPassword = Welcome@123
+SANDReqUserName = Rahul.initiator@yopmail.com
+SANDReqPassword = Welcome@123
+SANDRevUserName = Rahul.reviewer@yopmail.com
+SANDRevPassword = Welcome@123
 
 #(QAA) envS
-urlQAA = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/QAA/enter-username?redirect_url=%2Fhome%2Fdash%2Fwelcome
+QAA_url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/QAA/enter-username?redirect_url=%2Fhome%2Fdash%2Fwelcome
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=eiyaz.malik@prospecta.com
-qaaReqUserName = qaa_initiator@yopmail.com
-qaaReqPassword = Hello@123
-qaaRevUserName = qaa_reviewer@yopmail.com 
-qaaRevPassword = Hello@123
+QAAReqUserName = qaa_initiator@yopmail.com
+QAAReqPassword = Hello@123
+QAARevUserName = qaa_reviewer@yopmail.com 
+QAARevPassword = Hello@123
 
 #prod env
 #urlProd = http://fuse.masterdataonline.com
