--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 #----- Chrome Path ----
 driverPath = drivers/chromedriver
 browser=chrome
-headless=false
+headless=true
 
 #Int(QAR) envS
 QAR_url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/MarcusOne/enter-username
