--- a/config.properties
+++ b/config.properties
@@ -7,38 +7,38 @@ headless=false
 QAR_url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/MarcusOne/enter-username
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=eiyaz.malik@prospecta.com
-QARReqUserName = Auto_initiator@yopmail.com
-QARReqPassword = Welcome@123
-QARRevUserName = Auto_reviewer@yopmail.com
-QARRevPassword = Welcome@123
+QARInitiatorUserName = Auto_initiator@yopmail.com
+QARInitiatorPassword = Welcome@123
+QARReviewerUserName = Auto_Reviewer@yopmail.com
+QARReviewerPassword = Welcome@123
 
 #Stgaing(QAH) env
 QAH_url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/Marcusone/enter-username
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=roma.ahuja@prospecta.com
-#qahReqUserName = rahul.sharma@prospecta.com
-QAHReqUserName = prospecta_initiator@yopmail.com
-QAHReqPassword = Welcome@321
-QAHRevUserName = prospecta_reviewer@yopmail.com
-QAHRevPassword = Welcome@321
+#qahInitiatorUserName = rahul.sharma@prospecta.com
+QAHInitiatorUserName = prospecta_initiator@yopmail.com
+QAHInitiatorPassword = Welcome@321
+QAHReviewerUserName = prospecta_Reviewer@yopmail.com
+QAHReviewerPassword = Welcome@321
 
 #(SANDBOX) envS
 SAND_url = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/prosqa/enter-username
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=eiyaz.malik@prospecta.com
-SANDReqUserName = Rahul.initiator@yopmail.com
-SANDReqPassword = Welcome@123
-SANDRevUserName = Rahul.reviewer@yopmail.com
-SANDRevPassword = Welcome@123
+SANDInitiatorUserName = Rahul.initiator@yopmail.com
+SANDInitiatorPassword = Welcome@123
+SANDReviewerUserName = Rahul.Reviewer@yopmail.com
+SANDReviewerPassword = Welcome@123
 
 #(QAA) envS
 QAA_url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/QAA/enter-username?redirect_url=%2Fhome%2Fdash%2Fwelcome
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=eiyaz.malik@prospecta.com
-QAAReqUserName = qaa_initiator@yopmail.com
-QAAReqPassword = Hello@123
-QAARevUserName = qaa_reviewer@yopmail.com 
-QAARevPassword = Hello@123
+QAAInitiatorUserName = qaa_initiator@yopmail.com
+QAAInitiatorPassword = Hello@123
+QAAReviewerUserName = qaa_Reviewer@yopmail.com 
+QAAReviewerPassword = Hello@123
 
 #prod env
 #urlProd = http://fuse.masterdataonline.com
