Updated code, Resolved conflicts with master merge
Updated code, Resolved conflicts with master merge

--- a/config.properties
+++ b/config.properties
@@ -5,7 +5,7 @@ headless=false
 
 
 #Int(QAR) envS
-url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/MarcusOne/enter-username
+QAR_url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/MarcusOne/enter-username
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
 #qaUserName=eiyaz.malik@prospecta.com
 QARInitiatorUserName = Auto_initiator@yopmail.com
