Updated code to fetch value from excel

--- a/config.properties
+++ b/config.properties
@@ -3,7 +3,6 @@ driverPath = drivers/chromedriver
 browser=chrome
 headless=false
 
-
 #Int(QAR) envS
 QAR_url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/MarcusOne/enter-username
 #urlFuse = https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/Mondelez/enter-username
@@ -12,6 +11,8 @@ QARInitiatorUserName = Auto_initiator@yopmail.com
 QARInitiatorPassword = Welcome@123
 QARReviewerUserName = Auto_Reviewer@yopmail.com
 QARReviewerPassword = Welcome@123
+QARApproverUserName = automateapp@yopmail.com
+QARApproverPassword = Welcome@123
 
 #Stgaing(QAH) env
 QAH_url = https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/Marcusone/enter-username
