Updated credentials for QAR

--- a/config.properties
+++ b/config.properties
@@ -1,27 +1,32 @@
-#Mon Aug 14 13:12:33 IST 2023
+browser=chrome
+driverPath=drivers/chromedriver
+headless=false
+runCount=0
+
+QAA_url=https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/QAA/enter-username?redirect_url=%2Fhome%2Fdash%2Fwelcome
 QAAInitiatorPassword=Hello@123
 QAAInitiatorUserName=qaa_initiator@yopmail.com
 QAAReviewerPassword=Hello@123
 QAAReviewerUserName=qaa_Reviewer@yopmail.com 
-QAA_url=https\://fuse-int.masterdataonline.com/ngx-auth/en/index.html\#/auth/QAA/enter-username?redirect_url\=%2Fhome%2Fdash%2Fwelcome
+
+QAH_url=https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/Marcusone/enter-username
 QAHInitiatorPassword=Welcome@321
 QAHInitiatorUserName=prospecta_initiator@yopmail.com
 QAHReviewerPassword=Welcome@321
 QAHReviewerUserName=prospecta_Reviewer@yopmail.com
-QAH_url=https\://fuse-int.masterdataonline.com/ngx-auth/en/index.html\#/auth/Marcusone/enter-username
-QARApproverPassword=Welcome@123
-QARApproverUserName=automateapp@yopmail.com
+
+QAR_url=https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/AutoQA/enter-username
+QARInitiatorUserName=automateini@yopmail.com
 QARInitiatorPassword=Welcome@123
-QARInitiatorUserName=Auto_initiator@yopmail.com
+QARReviewerUserName=automaterev@yopmail.com
 QARReviewerPassword=Welcome@123
-QARReviewerUserName=Auto_Reviewer@yopmail.com
-QAR_url=https\://fuse-int.masterdataonline.com/ngx-auth/en/index.html\#/auth/MarcusOne/enter-username
+QARApproverUserName=automateapp@yopmail.com
+QARApproverPassword=Welcome@123
+
+SAND_url=https://fuse.masterdataonline.com/ngx-auth/en/index.html#/auth/prosqa/enter-username
 SANDInitiatorPassword=Welcome@123
 SANDInitiatorUserName=Rahul.initiator@yopmail.com
 SANDReviewerPassword=Welcome@123
 SANDReviewerUserName=Rahul.Reviewer@yopmail.com
-SAND_url=https\://fuse.masterdataonline.com/ngx-auth/en/index.html\#/auth/prosqa/enter-username
-browser=chrome
-driverPath=drivers/chromedriver
-headless=false
-runCount=63
+
+
