--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 browser=chrome
 driverPath=drivers/chromedriver
-headless=false
+headless=true
 runCount=0
 
 QAA_url=https://fuse-int.masterdataonline.com/ngx-auth/en/index.html#/auth/QAA/enter-username?redirect_url=%2Fhome%2Fdash%2Fwelcome
